--- a/public/admin/messages.html
+++ b/public/admin/messages.html
@@ -24,20 +24,8 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
                     <ul class="nav navbar-nav" id="mainNavBar">
-                        <li class="dropdown">
-                            <a href="panel.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produkter <span class="caret"></span></a>
-                            <ul class="dropdown-menu" id="categoryDropDown">
-                                <li><a href="panel.html">Alle produkter</a></li>
-                                <li><a href="panel.html?id=1">CD Afspillere</a></li>
-                                <li><a href="panel.html?id=2">DVD Afspillere</a></li>
-                                <li><a href="panel.html?id=3">Effektforstærkere</a></li>
-                                <li><a href="panel.html?id=4">Forforstærkere</a></li>
-                                <li><a href="panel.html?id=5">Højtalere</a></li>
-                                <li><a href="panel.html?id=6">Int. Forstærkere</a></li>
-                                <li><a href="panel.html?id=7">Pladespillere</a></li>
-                                <li><a href="panel.html?id=8">Rørforstærkere</a></li>
-                            </ul>
-                        </li>
+                        <ul class="nav navbar-nav" id="mainNavBar">
+                        </ul>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -59,14 +47,7 @@
                 <div class="row" id="addProductContainer">
                     <h2 class="addProductTitle">Beskeder</h2>
                     <ul id="messageContainer">
-                        <li class="messageItem">
-                            <h2 class="messageName">Tobias Brage</h2>
-                            <h2 class="messageMail">tobiasbrage@me.com</h2>
-                            <p class="messageContent">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pretium finibus metus eget aliquam. Morbi vitae nisi velit. Proin sit amet pharetra metus, nec semper ante. Sed nibh quam, tincidunt ac imperdiet quis, porttitor in rises
-                            </p>
-                            <input type="button" class="messageDelete" value="Slet besked" onclick="deleteMessage(1)">
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
