--- a/public/admin/settingspassword.html
+++ b/public/admin/settingspassword.html
@@ -51,7 +51,7 @@
                         <input type="password" class="addProductInput" name="oldPassword" id="oldPassword">
                     </span>
                     <span class="addProductSpan">
-                        <label for="newPassword" class="addProductLabel">Nyt adgangskode</label>
+                        <label for="newPassword" class="addProductLabel">Ny adgangskode</label>
                         <input type="password" class="addProductInput" name="newPassword" id="newPassword">
                     </span>
                     <span class="addProductSpan">
