--- a/public/admin/panel.html
+++ b/public/admin/panel.html
@@ -52,5 +52,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="../javascript/adminUser.js"></script>
         <script src="../javascript/adminProducts.js"></script>
+        <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     </body>
 </html>
